syntax = "proto3";

package todo_service;

import "google/api/annotations.proto";

option go_package = "gen/go/todo";

service TodoApi {
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {get: "/todo"};
  }

  rpc Add(AddRequest) returns (AddResponse) {
    option (google.api.http) = {post: "/todo"};
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {delete: "/todo/{id}"};
  }

  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {get: "/todo/health"};
  }

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message GetRequest {}

message GetResponse {
  repeated Todo list = 1;
}

message AddRequest {
  Todo todo = 1;
}

message AddResponse {
  uint64 id = 1;
}

message UpdateStatusRequest {
  uint64 id = 1;
  TodoStatus status = 2;
}

message UpdateStatusResponse {}

message UpdateTitleRequest {
  uint64 id = 1;
  string title = 2;
}

message UpdateTitleResponse {}

message DeleteRequest {
  uint64 id = 1;
}

message DeleteResponse {}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

message Todo {
  uint64 id = 1;
  string title = 2;
  TodoStatus status = 3;
  string status_name = 4;
}

enum TodoStatus {
  TODO_STATUS_UNSPECIFIED = 0;
  TODO_STATUS_DOING = 1;
  TODO_STATUS_DONE = 2;
}
